@@ -239,7 +239,13 @@ namespace libtorrent
 		torrent_info(char const* buffer, int size, int flags = 0);
 		torrent_info(std::string const& filename, int flags = 0);
 #if TORRENT_USE_WSTRING
-		torrent_info(std::wstring const& filename, int flags = 0);
+		// all wstring APIs are deprecated since 0.16.11
+		// instead, use the wchar -> utf8 conversion functions
+		// and pass in utf8 strings
+#ifndef TORRENT_NO_DEPRECATE
+		TORRENT_DEPRECATED_PREFIX
+		torrent_info(std::wstring const& filename, int flags = 0) TORRENT_DEPRECATED;
+#endif // TORRENT_NO_DEPRECATE
 #endif // TORRENT_USE_WSTRING
 #endif
 
@@ -249,7 +255,13 @@ namespace libtorrent
 		torrent_info(char const* buffer, int size, error_code& ec, int flags = 0);
 		torrent_info(std::string const& filename, error_code& ec, int flags = 0);
 #if TORRENT_USE_WSTRING
-		torrent_info(std::wstring const& filename, error_code& ec, int flags = 0);
+		// all wstring APIs are deprecated since 0.16.11
+		// instead, use the wchar -> utf8 conversion functions
+		// and pass in utf8 strings
+#ifndef TORRENT_NO_DEPRECATE
+		TORRENT_DEPRECATED_PREFIX
+		torrent_info(std::wstring const& filename, error_code& ec, int flags = 0) TORRENT_DEPRECATED;
+#endif // TORRENT_NO_DEPRECATE
 #endif // TORRENT_USE_WSTRING
 
 		~torrent_info();
@@ -264,11 +276,17 @@ namespace libtorrent
 		}
 
 #if TORRENT_USE_WSTRING
-		void rename_file(int index, std::wstring const& new_filename)
+		// all wstring APIs are deprecated since 0.16.11
+		// instead, use the wchar -> utf8 conversion functions
+		// and pass in utf8 strings
+#ifndef TORRENT_NO_DEPRECATE
+		TORRENT_DEPRECATED_PREFIX
+		void rename_file(int index, std::wstring const& new_filename) TORRENT_DEPRECATED
 		{
 			copy_on_write();
 			m_files.rename_file(index, new_filename);
 		}
+#endif // TORRENT_NO_DEPRECATE
 #endif // TORRENT_USE_WSTRING
 
 		void remap_files(file_storage const& f);
